# code_intelligence_mcp_server

./: .gitignore  CLAUDE.md  Cargo.toml  PUBLISHING.md  README.md  SYSTEM_ARCHITECTURE.md  TESTING.md  opencode.json
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/05-learning-system/: 05-RESEARCH.md
.planning/phases/09-multi-repo-support/: 09-01-PLAN.md  09-03-PLAN.md  09-04-PLAN.md  09-05-PLAN.md  09-06-PLAN.md  09-06-SUMMARY.md  09-07-PLAN.md  09-07-SUMMARY.md  09-CONTEXT.md  09-RESEARCH.md
.planning/phases/11-context-assembly-enhancement/: 11-01-VERIFICATION.md
npm/: README.md  install.js  package.json
proptest-regressions/indexer/pipeline/: utils.txt
proptest-regressions/path/: mod.txt
scripts/: protoc  release.sh  start_mcp.sh  test_local.sh
src/: cli.rs  config.rs  lib.rs  main.rs  retrieval.rs  text.rs  web_ui.rs
src/embeddings/: candle.rs  fastembed.rs  hash.rs  mod.rs  model_download.rs  onnx.rs
src/graph/: mod.rs  pagerank.rs
src/handlers/: mod.rs  state.rs
src/indexer/: mod.rs  parser.rs  pipeline.rs
src/indexer/extract/: c.rs  cpp.rs  elysia.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  symbol.rs  typescript.rs
src/indexer/package/: detector.rs  git.rs  mod.rs
src/indexer/package/parsers/: cargo.rs  go.rs  mod.rs  npm.rs  python.rs
src/indexer/pipeline/: edges.rs  mod.rs  parallel.rs  parsing.rs  scan.rs  stats.rs  usage.rs  utils.rs
src/metrics/: mod.rs  server.rs
src/path/: mod.rs
src/reranker/: cache.rs  mod.rs  onnx.rs
src/retrieval/: assembler.rs  cache.rs  mod.rs  query.rs
src/retrieval/assembler/: formatting.rs  graph.rs  mod.rs  tokens.rs
src/retrieval/hyde/: generator.rs  mod.rs
src/retrieval/ranking/: diversify.rs  expansion.rs  mod.rs  package.rs  reranker.rs  rrf.rs  score.rs
src/server/: mod.rs
src/storage/: cache.rs  mod.rs  sqlite.rs  tantivy.rs  vector.rs
src/storage/sqlite/: mod.rs  operations.rs  schema.rs
src/storage/sqlite/queries/: affinity.rs  cache.rs  decorators.rs  docstrings.rs  edges.rs  files.rs  framework.rs  metrics.rs  misc.rs  mod.rs  packages.rs  selections.rs  stats.rs  symbols.rs  tests.rs  todos.rs
src/tools/: mod.rs
tests/: integration_index_search.rs  integration_mcp_tools.rs
tests/support/: fixtures.rs  helpers.rs  mod.rs
