[package]
name = "code-intelligence-mcp-server"
version = "0.2.4"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
rust-mcp-sdk = { version = "0.8.1", features = ["macros", "server", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
tree-sitter = "0.25.0"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23.2"
rusqlite = { version = "0.33", features = ["bundled"] }
tantivy = "0.25.0"
lancedb = "0.23.1"
arrow-array = "56"
arrow-schema = "56"
futures = "0.3"
fastembed = "4"

axum = { version = "0.8", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"

# Phase 1 Foundation dependencies
lazy_static = "1.4"
num_cpus = "1"
once_cell = "1"
ort = "2.0.0-rc.5"
ndarray = "0.15"
tokenizers = "0.13"
postcard = { version = "1.1", features = ["use-std"] }
prometheus = "0.13"
rayon = "1"
tiktoken-rs = "0.7"

[features]
default = []

web-ui = ["axum", "tower-http"]

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
