[package]
name = "code-intelligence-mcp-server"
version = "1.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
rust-mcp-sdk = { version = "0.8.1", features = ["macros", "server", "stdio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
tree-sitter = "0.25.0"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23.2"
rusqlite = { version = "0.33", features = ["bundled"] }
tantivy = "0.25.0"
lancedb = "0.23.1"
arrow-array = "56"
arrow-schema = "56"
futures = "0.3"
fastembed = "4"

axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"

# Phase 1 Foundation dependencies
lazy_static = "1.4"
num_cpus = "1"
once_cell = "1"
ort = "2.0.0-rc.5"
postcard = { version = "1.1", features = ["use-std"] }
prometheus = "0.13"
sha2 = "0.10"
rayon = "1"
tiktoken-rs = "0.7"

# Phase 3 Reranker dependencies (03-02)
ndarray = "0.16"
tokenizers = "0.21"

# Phase 3 HyDE dependencies (03-03) - LLM API client
reqwest = { version = "0.12", features = ["json"] }

# Phase 9 Multi-repo dependencies
git2 = "0.19"
toml = "0.8"
regex = "1"

[dev-dependencies]
bytes = "1"
http-body-util = "0.1"
tempfile = "3"
